--- a/flavors/values-dev.yaml
+++ b/flavors/values-dev.yaml
@@ -1,14 +1,14 @@
-namespace: qa
+namespace: dev
 
 apps:
   - name: ui
     port: 8080
-    targets: "mgmt-service.qa:8080#5"
+    targets: "mgmt-service.dev:8080#5"
     role: frontend
 
   - name: mgmt
     port: 8080
-    targets: "ui-service.qa:8080#2,mock-mongo-service.qa:8080#3"
+    targets: "ui-service.dev:8080#5,mock-mongo-service.dev:8080#2"
     role: backend
     
   - name: mock-mongo
@@ -18,6 +18,6 @@ apps:
 
   - name: collector
     port: 8080
-    targets: "mgmt-service.qa:8080#1,mgmt-service.dev:8080#5"
+    targets: "mgmt-service.production:8080#1"
     role: data-path
 
